# trust-graph

./: .gitignore  README.md  plan.md
.claude/skills/: kagenti-rebuild.md
agent/: Dockerfile  pyproject.toml
agent/src/ml_agent/: a2a_client.py  agent.py  executor.py  llm_client.py  tracing.py
k8s/: jaeger.yaml
k8s/agentic/: agent-crs.yaml  authbridge-routes.yaml  deployments.yaml  environments-configmap.yaml  namespace.yaml  rbac.yaml  services.yaml  sidecar-configmaps.yaml
k8s/classic/: deployments.yaml  namespace.yaml  rbac.yaml
k8s/trust-graph-ui/: deployment.yaml
keycloak-spi/: Dockerfile  pom.xml
keycloak-spi/src/main/java/dev/kagenti/demo/keycloak/: AgenticTokenExchangeProvider.java  AgenticTokenExchangeProviderFactory.java
model-registry/: Dockerfile
model-registry/src/model_registry/: server.py
scripts/: build-images.sh  configure-keycloak.py  configure-keycloak.sh  delete-clients.py  deploy-agentic.sh  deploy-all.sh  deploy-classic.sh  port-forward.sh  run-demo-pipeline.sh  setup.sh  ssh-forward.sh  teardown.sh  test-demo.sh
trust-graph-ui/: Dockerfile  app.js  backend.py  index.html  pipeline-builder.js  styles.css
